--- a/package.json
+++ b/package.json
@@ -9,19 +9,58 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.28.1",
+    "@coreui/react": "^4.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@kinde-oss/kinde-auth-nextjs": "^2.0.13",
+    "@material-tailwind/react": "^2.0.1",
+    "@microsoft/fetch-event-source": "^2.0.1",
+    "@mui/material": "^5.13.5",
+    "@nextui-org/react": "^2.2.9",
+    "@radix-ui/react-accordion": "^1.1.1",
+    "@supabase/supabase-js": "^2.39.1",
+    "@pinecone-database/pinecone": "0.0.10",
+    "@swc/helpers": "^0.5.3",
+    "@types/marked": "^4.3.0",
+    "ai": "^2.2.31",
+    "axios": "^1.6.2",
+    "body-parser": "^1.20.2",
+    "clsx": "^1.2.1",
+    "cors": "^2.8.5",
+    "csv-parse": "^5.3.6",
+    "csv-parser": "^3.0.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "formidable": "^2.1.1",
+    "framer-motion": "^10.16.16",
+    "fs.promises": "^0.1.2",
+    "langchain": "0.0.41",
+    "lucide-react": "^0.125.0",
+    "marked": "^5.0.0",
+    "multer": "^1.4.5-lts.1",
+    "next": "13.5.6",
+    "next-themes": "^0.2.1",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.0.269",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.6"
+    "react-markdown": "^8.0.5",
+    "react-switch": "^7.0.0",
+    "tailwind-merge": "^1.10.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.6",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "typescript": "^5"
   }
 }
